--- a/src/styles.css
+++ b/src/styles.css
@@ -112,8 +112,8 @@ select {
     background-color: #7f9cf5;
 }
 
-.bg-blue {
-    background-color: #63b3ed;
+.bg-green {
+    background-color: #6eeca3;
 }
 
 .shadow {
